Temporarily remove GAFF because of parmchk2 issues (#329)
* Temporarily remove GAFF because of parmchk2 issues

* Drop OpenEye from tests

* Drop automerge action

* Update Python and AmberTools versions, run tests in parallel

* Remove Espaloma from test environment

* Remove Espaloma CI

* Refactor some tests to enable skipping GAFF

* Skip SPC/E test when iterating over small molecule force fields

* Update default force field in `SystemGenerator`

* Streamline testing

* Update testing setup

* Mask CodeCov upload failures

* Add release notes

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,10 +28,9 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest]
-        python-version: ["3.9", "3.10"]  # Add 3.11 in with AmberTools 23
-        exclude:
-          - python-version: "3.10"
-            os: macos-latest
+        python-version: ["3.10", "3.11", "3.12"]
+        amber-conversion: [false]
+        charmm-conversion: [false]
 
     steps:
     - uses: actions/checkout@v4
@@ -42,14 +41,6 @@ jobs:
         environment-file: devtools/conda-envs/test_env.yaml
         create-args: >-
           python=${{ matrix.python-version }}
-
-    - name: License OpenEye
-      shell: bash -l {0}
-      run: |
-        echo "${SECRET_OE_LICENSE}" > ${OE_LICENSE}
-        python -c "from openeye import oechem; assert oechem.OEChemIsLicensed()"
-      env:
-        SECRET_OE_LICENSE: ${{ secrets.OE_LICENSE }}
 
     - name: Install Package
       run: |
@@ -66,29 +57,31 @@ jobs:
 
     - name: Test Installed Package
       run: |
-        pytest -v --log-cli-level $LOGLEVEL $COV_ARGS --durations=20 \
-          openmmforcefields/tests/test_amber_import.py \
-          openmmforcefields/tests/test_template_generators.py \
-          openmmforcefields/tests/test_system_generator.py \
-          -k "not TestEspalomaTemplateGenerator"
+        pytest -v -n logical --log-cli-level $LOGLEVEL $COV_ARGS --durations=20 \
+          openmmforcefields/tests/
+
+        # add --rungaff / --runespaloma to run those tests
+
       env:
         COV_ARGS: --cov=openmmforcefields --cov-config=setup.cfg --cov-append --cov-report=xml
         LOGLEVEL: "INFO"
         KMP_DUPLICATE_LIB_OK: "True"
 
     - name: Test AMBER conversion
+      if: ${{ matrix.amber-conversion == 'true' }}
       run: |
         python convert_amber.py --input gaff.yaml --log gaff-tests.csv --verbose
       working-directory: ./amber
 
     - name: Test CHARMM conversion
+      if: ${{ matrix.charmm-conversion == 'true' }}
       run: |
 
-        # TODO: Uncomment these tests when new ParmEd is released
+        # TODO: Turn on these tests (in job matrix) when new ParmEd is released
         # TODO: Find a way to avoid timing out when running full charmm36.yaml conversion below
-        # python convert_charmm.py --verbose --in files/waters.yaml && python convert_charmm.py --verbose --in files/charmm36.yaml
-        # python convert_charmm.py --verbose --in files/waters.yaml
-        # python convert_charmm.py --verbose
+        python convert_charmm.py --verbose --in files/waters.yaml && python convert_charmm.py --verbose --in files/charmm36.yaml
+        python convert_charmm.py --verbose --in files/waters.yaml
+        python convert_charmm.py --verbose
 
         # TODO: Uncomment this when tests are expected to work
         # python test_charmm.py --verbose
@@ -107,4 +100,4 @@ jobs:
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
         file: ./coverage.xml
-        fail_ci_if_error: true
+        fail_ci_if_error: false  # I don't want this to cause CI failures when a developer pushes to a fork
