--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,7 @@ profile=black
 
 [flake8]
 max-line-length = 119
-ignore = E203,E501,W605,W503
+ignore = E203,E501,W605,W503,E226
 per-file-ignores =
     openmmforcefields/__init__.py:F401
     openmmforcefields/generators/__init__.py:F401
