--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,15 +2,9 @@ ci:
   autoupdate_schedule: "quarterly"
 files: ^openmmforcefields/
 repos:
-- repo: https://github.com/psf/black
-  rev: 23.12.0
+- repo: https://github.com/astral-sh/ruff-pre-commit
+  rev: v0.4.2
   hooks:
-  - id: black
-- repo: https://github.com/PyCQA/isort
-  rev: 5.13.2
-  hooks:
-  - id: isort
-- repo: https://github.com/PyCQA/flake8
-  rev: 6.1.0
-  hooks:
-  - id: flake8
+    - id: ruff
+      args: [ --fix ]
+    - id: ruff-format
