--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,10 +1,9 @@
 ci:
   autoupdate_schedule: "quarterly"
-files: ^openmmforcefields/
 repos:
 - repo: https://github.com/astral-sh/ruff-pre-commit
   rev: v0.4.2
   hooks:
     - id: ruff
-      args: [ --fix ]
+      args: ["--fix", "--unsafe-fixes"]
     - id: ruff-format
