--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,16 +2,14 @@
 line-length = 119
 
 [tool.ruff.lint]
-ignore = [
-    "E501",
-    "W605",
-]
 select = [
     "E",
     "F",
     "W",
+    "UP",
 ]
 
 [tool.ruff.lint.per-file-ignores]
 "openmmforcefields/generators/__init__.py" = ["F401"]
 "openmmforcefields/__init__.py" = ["F401"]
+"charmm/energy.py" = ["E501"]
