--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -57,7 +57,7 @@ jobs:
 
     - name: Test Installed Package
       run: |
-        pytest -v -n logical --rungaf --runespaloma --log-cli-level $LOGLEVEL $COV_ARGS --durations=20 \
+        pytest -v -n logical --rungaff --runespaloma --log-cli-level $LOGLEVEL $COV_ARGS --durations=20 \
           openmmforcefields/tests/
 
         # add --rungaff / --runespaloma to run those tests
