Copy mike's changes and install openmm 8.1.2rc1

--- a/devtools/conda-envs/test_env.yaml
+++ b/devtools/conda-envs/test_env.yaml
@@ -2,6 +2,7 @@ name: openmmforcefields-test
 
 channels:
   - conda-forge
+  - conda-forge/label/openmm_rc
 
 dependencies:
     # Base depends
@@ -15,7 +16,7 @@ dependencies:
   - pytest-randomly
 
     # Requirements for converted force field installer
-  - openmm >=7.6.0
+  - openmm =8.1.2rc1
 
   - openff-toolkit >=0.11
 
