--- a/devtools/conda-envs/test_env.yaml
+++ b/devtools/conda-envs/test_env.yaml
@@ -1,6 +1,5 @@
 name: openmmforcefields-test
 channels:
-  - conda-forge/label/openmm_rc
   - conda-forge
 dependencies:
   - python
@@ -9,7 +8,7 @@ dependencies:
   - pytest-cov
   - pytest-xdist
   - pytest-randomly
-  - openmm ~=8.1.2rc1
+  - openmm >=8.1.2
   - openff-toolkit >=0.11
   - pyyaml
   - ambertools >=22,<24
