--- a/devtools/conda-envs/test_env.yaml
+++ b/devtools/conda-envs/test_env.yaml
@@ -8,7 +8,7 @@ dependencies:
   - pytest-cov
   - pytest-xdist
   - pytest-randomly
-  - openmm >=8.1.2
+  - openmm >=8.1.2,<9
   - openff-toolkit >=0.11
   - pyyaml
   - ambertools >=22,<24
@@ -16,4 +16,4 @@ dependencies:
   - networkx
   - tinydb
   - validators
-  - rdkit !=2024.03.4
+  - rdkit
