re-enable gaff (#334)
* re-enable gaff

* run espaloma and gaff tests

* gaff has two fs michael

* Use 8.1.2rc1

* Update linters

* Remove Espaloma tests

* Apply suggestions from code review

Co-authored-by: Iván Pulido <2949729+ijpulidos@users.noreply.github.com>

* Use Intel macOS runners

* check if older macos works

* test all the macos versions

* see if rdkit is the issue

* Drop macOS 13

* Typo/fix

* Update dependencies

---------

Co-authored-by: Matthew W. Thompson <mattwthompson@protonmail.com>
Co-authored-by: Iván Pulido <2949729+ijpulidos@users.noreply.github.com>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,7 +27,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest, macos-12, macos-latest]
         python-version: ["3.10", "3.11", "3.12"]
         amber-conversion: [false]
         charmm-conversion: [false]
@@ -57,7 +57,7 @@ jobs:
 
     - name: Test Installed Package
       run: |
-        pytest -v -n logical --log-cli-level $LOGLEVEL $COV_ARGS --durations=20 \
+        pytest -v -n logical --rungaff --log-cli-level $LOGLEVEL $COV_ARGS --durations=20 \
           openmmforcefields/tests/
 
         # add --rungaff / --runespaloma to run those tests
