--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -101,5 +101,5 @@ jobs:
               && github.event != 'schedule' }}
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
-        file: ./coverage.xml
+        files: ./coverage.xml
         fail_ci_if_error: false  # I don't want this to cause CI failures when a developer pushes to a fork
