--- a/charmm/files/waters.yaml
+++ b/charmm/files/waters.yaml
@@ -4,6 +4,7 @@
   Source:
     stream:
      - toppar/toppar_water_ions.str
+     - toppar/stream/misc/toppar_ions_won.str
     exclude_residues:
      - TP3M
   References:
@@ -15,22 +16,20 @@
      - >-
        Beglov, D. and Roux, B., Finite Representation of an Infinite Bulk System: Solvent Boundary Potential for
        Computer Simulations, Journal of Chemical Physics, 1994, 100: 9050-9063
-     - zinc:
-       - >-
-         Stote, R.H. and Karplus, M. Zinc Binding in Proteins and Solution: A Simple but Accurate Nonbonded
-         Representation, PROTEINS: Structure, Function, and Genetics 23:12-31 (1995)
-     - cations:
-       - >-
-         Won, Y., "Force Field for Monovalent, Divalent, and Trivalent Cations Developed under the Solvent Boundary
-         Potential," Journal of Physical Chemistry A., 116: 11763-11767, 2012.
+     - >-
+       Stote, R.H. and Karplus, M. Zinc Binding in Proteins and Solution: A Simple but Accurate Nonbonded
+       Representation, PROTEINS: Structure, Function, and Genetics 23:12-31 (1995)
+     - >-
+       Won, Y., "Force Field for Monovalent, Divalent, and Trivalent Cations Developed under the Solvent Boundary
+       Potential," Journal of Physical Chemistry A., 116: 11763-11767, 2012.
   Test:
     - tests/watbox216.pdb
+
 - Destination: waters_ions_spc_e.xml
   Source:
-    include:
     stream:
      - toppar/non_charmm/toppar_water_ions_spc_e.str
-    exclude:
+     - toppar/stream/misc/toppar_ions_won.str
   References:
    spc-e:
      - >-
@@ -41,18 +40,20 @@
      - >-
        Beglov, D. and Roux, B., Finite Representation of an Infinite Bulk System: Solvent Boundary Potential for
        Computer Simulations, Journal of Chemical Physics, 1994, 100: 9050-9063
-     - zinc:
-       - >-
-         Stote, R.H. and Karplus, M. Zinc Binding in Proteins and Solution: A Simple but Accurate Nonbonded
-         Representation, PROTEINS: Structure, Function, and Genetics 23:12-31 (1995)
+     - >-
+       Stote, R.H. and Karplus, M. Zinc Binding in Proteins and Solution: A Simple but Accurate Nonbonded
+       Representation, PROTEINS: Structure, Function, and Genetics 23:12-31 (1995)
+     - >-
+       Won, Y., "Force Field for Monovalent, Divalent, and Trivalent Cations Developed under the Solvent Boundary
+       Potential," Journal of Physical Chemistry A., 116: 11763-11767, 2012.
   Test:
     - tests/watbox216.pdb
+
 - Destination: waters_ions_spc.xml
   Source:
-    include:
     stream:
      - toppar/non_charmm/toppar_water_ions_spc.str
-    exclude:
+     - toppar/stream/misc/toppar_ions_won.str
   References:
    spc:
      - >-
@@ -63,18 +64,20 @@
      - >-
        Beglov, D. and Roux, B., Finite Representation of an Infinite Bulk System: Solvent Boundary Potential for
        Computer Simulations, Journal of Chemical Physics, 1994, 100: 9050-9063
-     - zinc:
-       - >-
-         Stote, R.H. and Karplus, M. Zinc Binding in Proteins and Solution: A Simple but Accurate Nonbonded
-         Representation, PROTEINS: Structure, Function, and Genetics 23:12-31 (1995)
+     - >-
+       Stote, R.H. and Karplus, M. Zinc Binding in Proteins and Solution: A Simple but Accurate Nonbonded
+       Representation, PROTEINS: Structure, Function, and Genetics 23:12-31 (1995)
+     - >-
+       Won, Y., "Force Field for Monovalent, Divalent, and Trivalent Cations Developed under the Solvent Boundary
+       Potential," Journal of Physical Chemistry A., 116: 11763-11767, 2012.
   Test:
     - tests/watbox216.pdb
+
 - Destination: waters_ions_tip3p_pme_b.xml
   Source:
-    include:
     stream:
      - toppar/non_charmm/toppar_water_ions_tip3p_pme_b.str
-    exclude:
+     - toppar/stream/misc/toppar_ions_won.str
   References:
    tip3p-pme-b:
      - >-
@@ -85,18 +88,20 @@
      - >-
        Beglov, D. and Roux, B., Finite Representation of an Infinite Bulk System: Solvent Boundary Potential for
        Computer Simulations, Journal of Chemical Physics, 1994, 100: 9050-9063
-     - zinc:
-       - >-
-         Stote, R.H. and Karplus, M. Zinc Binding in Proteins and Solution: A Simple but Accurate Nonbonded
-         Representation, PROTEINS: Structure, Function, and Genetics 23:12-31 (1995)
+     - >-
+       Stote, R.H. and Karplus, M. Zinc Binding in Proteins and Solution: A Simple but Accurate Nonbonded
+       Representation, PROTEINS: Structure, Function, and Genetics 23:12-31 (1995)
+     - >-
+       Won, Y., "Force Field for Monovalent, Divalent, and Trivalent Cations Developed under the Solvent Boundary
+       Potential," Journal of Physical Chemistry A., 116: 11763-11767, 2012.
   Test:
     - tests/watbox216.pdb
+
 - Destination: waters_ions_tip3p_pme_f.xml
   Source:
-    include:
     stream:
      - toppar/non_charmm/toppar_water_ions_tip3p_pme_f.str
-    exclude:
+     - toppar/stream/misc/toppar_ions_won.str
   References:
    tip3p-pme-f:
      - >-
@@ -107,18 +112,20 @@
      - >-
        Beglov, D. and Roux, B., Finite Representation of an Infinite Bulk System: Solvent Boundary Potential for
        Computer Simulations, Journal of Chemical Physics, 1994, 100: 9050-9063
-     - zinc:
-       - >-
-         Stote, R.H. and Karplus, M. Zinc Binding in Proteins and Solution: A Simple but Accurate Nonbonded
-         Representation, PROTEINS: Structure, Function, and Genetics 23:12-31 (1995)
+     - >-
+       Stote, R.H. and Karplus, M. Zinc Binding in Proteins and Solution: A Simple but Accurate Nonbonded
+       Representation, PROTEINS: Structure, Function, and Genetics 23:12-31 (1995)
+     - >-
+       Won, Y., "Force Field for Monovalent, Divalent, and Trivalent Cations Developed under the Solvent Boundary
+       Potential," Journal of Physical Chemistry A., 116: 11763-11767, 2012.
   Test:
     - tests/watbox216.pdb
+
 - Destination: waters_ions_tip4p_2005.xml
   Source:
-    include:
     stream:
      - toppar/non_charmm/toppar_water_ions_tip4p_2005.str
-    exclude:
+     - toppar/stream/misc/toppar_ions_won.str
   References:
    tip4p-2005:
      - >-
@@ -129,16 +136,18 @@
      - >-
        Beglov, D. and Roux, B., Finite Representation of an Infinite Bulk System: Solvent Boundary Potential for
        Computer Simulations, Journal of Chemical Physics, 1994, 100: 9050-9063
-     - zinc:
-       - >-
-         Stote, R.H. and Karplus, M. Zinc Binding in Proteins and Solution: A Simple but Accurate Nonbonded
-         Representation, PROTEINS: Structure, Function, and Genetics 23:12-31 (1995)
+     - >-
+       Stote, R.H. and Karplus, M. Zinc Binding in Proteins and Solution: A Simple but Accurate Nonbonded
+       Representation, PROTEINS: Structure, Function, and Genetics 23:12-31 (1995)
+     - >-
+       Won, Y., "Force Field for Monovalent, Divalent, and Trivalent Cations Developed under the Solvent Boundary
+       Potential," Journal of Physical Chemistry A., 116: 11763-11767, 2012.
+
 - Destination: waters_ions_tip4p_ew.xml
   Source:
-    include:
     stream:
      - toppar/non_charmm/toppar_water_ions_tip4p_ew.str
-    exclude:
+     - toppar/stream/misc/toppar_ions_won.str
   References:
    tip4p-ew:
      - >-
@@ -148,16 +157,18 @@
      - >-
        Beglov, D. and Roux, B., Finite Representation of an Infinite Bulk System: Solvent Boundary Potential for
        Computer Simulations, Journal of Chemical Physics, 1994, 100: 9050-9063
-     - zinc:
-       - >-
-         Stote, R.H. and Karplus, M. Zinc Binding in Proteins and Solution: A Simple but Accurate Nonbonded
-         Representation, PROTEINS: Structure, Function, and Genetics 23:12-31 (1995)
+     - >-
+       Stote, R.H. and Karplus, M. Zinc Binding in Proteins and Solution: A Simple but Accurate Nonbonded
+       Representation, PROTEINS: Structure, Function, and Genetics 23:12-31 (1995)
+     - >-
+       Won, Y., "Force Field for Monovalent, Divalent, and Trivalent Cations Developed under the Solvent Boundary
+       Potential," Journal of Physical Chemistry A., 116: 11763-11767, 2012.
+
 - Destination: waters_ions_tip4p.xml
   Source:
-    include:
     stream:
      - toppar/non_charmm/toppar_water_ions_tip4p.str
-    exclude:
+     - toppar/stream/misc/toppar_ions_won.str
   References:
    tip4p:
      - >-
@@ -167,16 +178,18 @@
      - >-
        Beglov, D. and Roux, B., Finite Representation of an Infinite Bulk System: Solvent Boundary Potential for
        Computer Simulations, Journal of Chemical Physics, 1994, 100: 9050-9063
-     - zinc:
-       - >-
-         Stote, R.H. and Karplus, M. Zinc Binding in Proteins and Solution: A Simple but Accurate Nonbonded
-         Representation, PROTEINS: Structure, Function, and Genetics 23:12-31 (1995)
+     - >-
+       Stote, R.H. and Karplus, M. Zinc Binding in Proteins and Solution: A Simple but Accurate Nonbonded
+       Representation, PROTEINS: Structure, Function, and Genetics 23:12-31 (1995)
+     - >-
+       Won, Y., "Force Field for Monovalent, Divalent, and Trivalent Cations Developed under the Solvent Boundary
+       Potential," Journal of Physical Chemistry A., 116: 11763-11767, 2012.
+
 - Destination: waters_ions_tip5p_ew.xml
   Source:
-    include:
     stream:
      - toppar/non_charmm/toppar_water_ions_tip5p_ew.str
-    exclude:
+     - toppar/stream/misc/toppar_ions_won.str
   References:
    tip5p-ew:
      - >-
@@ -187,16 +200,18 @@
      - >-
        Beglov, D. and Roux, B., Finite Representation of an Infinite Bulk System: Solvent Boundary Potential for
        Computer Simulations, Journal of Chemical Physics, 1994, 100: 9050-9063
-     - zinc:
-       - >-
-         Stote, R.H. and Karplus, M. Zinc Binding in Proteins and Solution: A Simple but Accurate Nonbonded
-         Representation, PROTEINS: Structure, Function, and Genetics 23:12-31 (1995)
+     - >-
+       Stote, R.H. and Karplus, M. Zinc Binding in Proteins and Solution: A Simple but Accurate Nonbonded
+       Representation, PROTEINS: Structure, Function, and Genetics 23:12-31 (1995)
+     - >-
+       Won, Y., "Force Field for Monovalent, Divalent, and Trivalent Cations Developed under the Solvent Boundary
+       Potential," Journal of Physical Chemistry A., 116: 11763-11767, 2012.
+
 - Destination: waters_ions_tip5p.xml
   Source:
-    include:
     stream:
      - toppar/non_charmm/toppar_water_ions_tip5p.str
-    exclude:
+     - toppar/stream/misc/toppar_ions_won.str
   References:
    tip5p:
      - >-
@@ -207,7 +222,9 @@
      - >-
        Beglov, D. and Roux, B., Finite Representation of an Infinite Bulk System: Solvent Boundary Potential for
        Computer Simulations, Journal of Chemical Physics, 1994, 100: 9050-9063
-     - zinc:
-       - >-
-         Stote, R.H. and Karplus, M. Zinc Binding in Proteins and Solution: A Simple but Accurate Nonbonded
-         Representation, PROTEINS: Structure, Function, and Genetics 23:12-31 (1995)
+     - >-
+       Stote, R.H. and Karplus, M. Zinc Binding in Proteins and Solution: A Simple but Accurate Nonbonded
+       Representation, PROTEINS: Structure, Function, and Genetics 23:12-31 (1995)
+     - >-
+       Won, Y., "Force Field for Monovalent, Divalent, and Trivalent Cations Developed under the Solvent Boundary
+       Potential," Journal of Physical Chemistry A., 116: 11763-11767, 2012.
