--- a/charmm/files/charmm36.yaml
+++ b/charmm/files/charmm36.yaml
@@ -87,9 +87,17 @@
        - toppar/stream/prot/toppar_all36_prot_modify_res.str
        output: charmm36_modified.xml
 
-    # Here we manually add in the DISU (cysteine disulfide) patch to the force
-    # field since ParmEd doesn't convert it automatically
     fixes:
+      # Here the CustomTorsionForce (used to handle impropers) is updated with a
+      # correct functional form since ParmEd writes one that doesn't account for
+      # the periodicity of theta
+      - action: update_attrib
+        target: ./CustomTorsionForce
+        content:
+          energy: k*min(dtheta, 2*pi - dtheta)^2; dtheta = abs(theta - theta0); pi = 3.1415926535897931
+
+      # Here we manually add in the DISU (cysteine disulfide) patch to the force
+      # field since ParmEd doesn't convert it automatically
       - action: append
         target: ./Patches
         content:
