Handle impropers directly instead of relying on ParmEd
* Adds functionality to output impropers in a way that should be
  compatible with their explicit specification in the CHARMM force field
  files

* Ensures that impropers spanning patch and residue atoms will not be
  neglected

* Ensures that duplicate improper entries will not be written to split
  files

--- a/charmm/files/drude2023.yaml
+++ b/charmm/files/drude2023.yaml
@@ -13,10 +13,14 @@
      - toppar/drude/drude_toppar_2023/toppar_drude_d_aminoacids_2023a.str
      - toppar/drude/drude_toppar_2023/toppar_drude_carbohydrate_2023a.str
      - toppar/drude/drude_toppar_2023/toppar_drude_model_2023a.str
-     #- toppar/drude/drude_toppar_2023/toppar_drude_nucleic_acid_2017d.str
+     # - toppar/drude/drude_toppar_2023/toppar_drude_nucleic_acid_2017d.str
      - toppar/drude/drude_toppar_2023/toppar_drude_lipid_2023a.str
     exclude_residues:
      - SWM6
+    split:
+      - input:
+        - toppar/drude/drude_toppar_2023/toppar_drude_d_aminoacids_2023a.str
+        output: charmm_polar_2023_d.xml
   References:
    protein:
      - >-
