Another attempt at proper improper handling
* Uses a force field script to correctly insert impropers.  Should
  handle all cases except for ambiguous equivalent atoms (like OT1/OT2).

* Removed some miscellaneous test code from the conversion script since
  the test script handles this more thoroughly.

--- a/charmm/files/charmm36.yaml
+++ b/charmm/files/charmm36.yaml
@@ -85,7 +85,7 @@
      - input:
        - toppar/stream/prot/toppar_all36_prot_c36m_d_aminoacids.str
        - toppar/stream/prot/toppar_all36_prot_modify_res.str
-       output: charmm36_modified.xml
+       output: charmm36_d_modified.xml
      
      # CGenFF has some small molecule entries that cause clashes with some amino
      # acids, so isolate these as well
