--- a/devtools/conda-envs/test_env.yaml
+++ b/devtools/conda-envs/test_env.yaml
@@ -11,7 +11,7 @@ dependencies:
   - openmm
   - openff-toolkit >=0.11
   - pyyaml
-  - ambertools=23.6=*_105
+  - ambertools >=24
   - lxml
   - networkx
   - tinydb
