--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,6 +32,10 @@ jobs:
         amber-conversion: [false]
         charmm-conversion: [false]
         openmm-version: ["8.1.1", "8.1.2"]
+        exclude:
+          # No python 3.13 builds for openmm 8.1.2
+          python-version: "3.13"
+          openmm-version: "8.1.2"
 
     steps:
     - uses: actions/checkout@v4
