fix syntax issue in yaml

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -34,8 +34,8 @@ jobs:
         openmm-version: ["8.1.2", "8.2.0"]
         exclude:
           # No python 3.13 builds for openmm 8.1.2
-          python-version: "3.13"
-          openmm-version: "8.1.2"
+          - python-version: "3.13"
+            openmm-version: "8.1.2"
 
     steps:
     - uses: actions/checkout@v4
