--- a/charmm/tests/11_water_boxes/test_tip4p.yaml
+++ b/charmm/tests/11_water_boxes/test_tip4p.yaml
@@ -4,7 +4,7 @@ psf_file: waterbox-4-site-tip4p.psf
 pdb_file: waterbox-4-site.pdb
 
 charmm_files:
-  - non_charmm/toppar_water_ions_tip4p.str
+  - toppar_water_ions_tip4p.str
 charmm_commands:
   - nbonds atom ewald pmew fftx 32 ffty 32 fftz 32 kappa 0.32 order 6 cutnb 12 vdw vswitched ctonnb 10 ctofnb 12
 
