try downpinning away from openff-interchange 0.4.2

--- a/devtools/conda-envs/test_env.yaml
+++ b/devtools/conda-envs/test_env.yaml
@@ -10,6 +10,7 @@ dependencies:
   - pytest-randomly
   - openmm
   - openff-toolkit >=0.11
+  - openff-interchange =0.4.1
   - pyyaml
   - ambertools >=22,<24
   - lxml
