--- a/devtools/conda-envs/test_env.yaml
+++ b/devtools/conda-envs/test_env.yaml
@@ -10,7 +10,7 @@ dependencies:
   - pytest-randomly
   - openmm
   - openff-toolkit >=0.11
-  - openff-interchange =0.4.1
+  - openff-interchange !=0.4.2
   - pyyaml
   - ambertools >=24
   - lxml
