--- a/devtools/conda-envs/test_env.yaml
+++ b/devtools/conda-envs/test_env.yaml
@@ -12,7 +12,7 @@ dependencies:
   - openff-toolkit >=0.11
   - openff-interchange =0.4.1
   - pyyaml
-  - ambertools >=22,<24
+  - ambertools >=24
   - lxml
   - networkx
   - tinydb
