--- a/charmm/files/charmm36.yaml
+++ b/charmm/files/charmm36.yaml
@@ -91,7 +91,28 @@
         - toppar/stream/prot/toppar_all36_prot_c36m_d_aminoacids.str
         - toppar/stream/prot/toppar_all36_prot_modify_res.str
         output: charmm36_d_modified.xml
-      
+        fixes:
+          # See nucleic acid fix comments below.
+          - action: append
+            target:
+              - ./Residues/Residue[@name='BUG']
+            content:
+              tag: ExternalBond
+              attrib:
+                atomName: P
+          - action: append
+            target: ./Residues/Residue/AllowPatch[@name='DEO5_0']/..
+            content:
+              - tag: AllowPatch
+                attrib:
+                  name: DEO5TER
+              - tag: AllowPatch
+                attrib:
+                  name: DEO5MET
+          - action: remove
+            target:
+              - ./Residues/Residue/AllowPatch[@name='DEO5_0']
+
       # This file has a large number of carbohydrate patches that slow down
       # OpenMM
       - input:
@@ -104,6 +125,12 @@
         - toppar/top_all36_cgenff.rtf
         - toppar/par_all36_cgenff.prm
         output: charmm36_cgenff.xml
+        fixes:
+          # The residues with this patch in this file are not nucleic acid
+          # residues meant to be part of a polymer, so just remove <AllowPatch>.
+          - action: remove
+            target:
+              - ./Residues/Residue/AllowPatch[@name='DEO5_0']
 
     fixes:
       # Here we manually set nucleic acid external bonds because CHARMM doesn't
