Exclude messier/auto-generated code, update

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,6 @@
 [tool.ruff]
 line-length = 119
+extend-exclude = ["openmmforcefields/_version.py", "versioneer.py", "amber/", "charmm/"]
 
 [tool.ruff.lint]
 select = [
