--- a/devtools/conda-envs/test_charmm_env.yaml
+++ b/devtools/conda-envs/test_charmm_env.yaml
@@ -1,6 +1,7 @@
 name: openmmforcefields-test-charmm
 channels:
   - conda-forge
+  - conda-forge/label/openmm_dev
 dependencies:
   - python
   - pip
