--- a/amber/biopolymer.yaml
+++ b/amber/biopolymer.yaml
@@ -5,29 +5,18 @@
 - MODE: LEAPRC
 - sourcePackage: AmberTools
   sourcePackageVersion: 20.15
-- Source: leaprc.phosaa10
+
+- Source: oldff/leaprc.ff14ipq
   Reference:
   - >-
-    Homeyer N., Horn A. H. C., Lanig H., Sticht H. (2006). AMBER force-field parameters for phosphorylated amino acids in different protonation states: phosphoserine, phosphothreonine, phosphotyrosine, and phosphohistidine.
-    J. Mol. Model. 12, 281.
-    Steinbrecher, T., Latzer, J., and Case, D.A. (2012). Revised AMBER parameters for bioorganic phosphates.
-    J. Chem. Theory Comput. 8, 4405-4412.
+    Cerutti, D.S.; Swope, W.C.; Rice, J.E.; Case, D.A.
+    ff14ipq: A Self-Consistent Force Field for Condensed-Phase Simulations of Proteins.
+    J. Chem. Theory Comput., 2014, 10, 4515-4534.
   Options:
     filter_warnings: always
-    write_unused: True
   Test:
-  - protein_phospho
-- Source: leaprc.phosaa14SB
-  Reference:
-  - >-
-    L. Raguette; A. Cuomo; K. Belfon; C. Tian; Q. Wu; C. Simmerling.
-    Updated Amber force field parameters for phosphorylated amino acids for ff14SB and ff19SB.
-    In Prep, 2020.
-  Options:
-    filter_warnings: always
-    write_unused: True
-  Test:
-  - protein_phospho
+  - protein
+  - nucleic
 - Source: leaprc.protein.ff15ipq
   Prefix: protein
   Reference:
@@ -46,8 +35,8 @@
     J. Chem. Theory Comput., 2016, 12, 3926-3947.
   Test:
   - protein
-- Source: leaprc.lipid17
-  CharmmFFXMLFilename: ../charmm/ffxml/charmm36_nowaters.xml
+- Source: oldff/leaprc.lipid17
+  CharmmFFXMLFilename: ../openmmforcefields/ffxml/charmm/charmm36_nowaters.xml
   CharmmLipid2AmberFilename: files/charmmlipid2amber.csv
   Reference:
   - >-
@@ -322,14 +311,3 @@
     write_unused: True
   Test:
   - protein_phospho
-# FFs that couldn't be converted yet due to problems
-# Torsion problem
-#- Source: oldff/leaprc.ff14ipq
-  # Reference:
-  # - >-
-  #   Placeholder
-  #   Placeholder
-  # Test:
-  # - protein
-  # - nucleic
-  #
