--- a/amber/gaff.yaml
+++ b/amber/gaff.yaml
@@ -1,5 +1,5 @@
 - sourcePackage: AmberTools
-  sourcePackageVersion: 19.9
+  sourcePackageVersion: "24.8"
 - MODE: GAFF
 - Source: gaff-1.4.dat
   Name: gaff-1.4
@@ -99,6 +99,22 @@
     Journal of Molecular Graphics and Modelling , 25, 2006, 247260.
 - Source: gaff-2.11.dat
   Name: gaff-2.11
+  leaprc: files/gaff/leaprc.gaff2
+  Options:
+    write_unused: True
+    ffxml_dir: ../openmmforcefields/ffxml/amber/gaff/ffxml
+  Test:
+  - gaff
+  Reference:
+  - >-
+    Wang, J., Wolf, R.M., Caldwell, J.W., Kollman, P.A., and Case, D.A. (2004).
+    Development and testing of a general amber force field. J. Comput. Chem. 25, 1157-1174.
+  - >-
+    Wang, J., Wang, W., Kollman P. A.; Case, D. A.
+    Automatic atom type and bond type perception in molecular mechanical calculations.
+    Journal of Molecular Graphics and Modelling , 25, 2006, 247260.
+- Source: gaff-2.2.20.dat
+  Name: gaff-2.2.20
   leaprc: files/gaff/leaprc.gaff2
   Options:
     write_unused: True
