--- a/amber/solvents.yaml
+++ b/amber/solvents.yaml
@@ -1,9 +1,9 @@
 # IONS & SOLVENTS
 - MODE: RECIPE
 - sourcePackage: AmberTools
-  sourcePackageVersion: 20.15
+  sourcePackageVersion: "24.8"
 - sourcePackage2: OpenMM
-  sourcePackageVersion2: 7.5.0
+  sourcePackageVersion2: "8.2.0"
 - Source:
   - parm/frcmod.ionsjc_tip3p
   - parm/frcmod.ions234lm_126_tip3p
