--- a/devtools/conda-envs/test_charmm_env.yaml
+++ b/devtools/conda-envs/test_charmm_env.yaml
@@ -3,7 +3,8 @@ channels:
   - conda-forge/label/openmm_dev
   - conda-forge
 dependencies:
-  - python
-  - pip
+  - numpy <2.3
   - openmm
+  - pip
+  - python
   - pyyaml
