--- a/charmm/files/charmm36.yaml
+++ b/charmm/files/charmm36.yaml
@@ -133,6 +133,14 @@
               - ./Residues/Residue/AllowPatch[@name='DEO5_0']
 
     fixes:
+      # Remove proline-specific patch from non-proline residues
+      - action: remove
+        target:
+          - ./Residues/Residue[@name!='PRO']/AllowPatch[@name='PROP_0']
+          - ./Residues/Residue[@name!='PRO']/AllowPatch[@name='PROP_1']
+          - ./Residues/Residue[@name!='PRO']/AllowPatch[@name='PROP_2']
+          - ./Residues/Residue[@name!='PRO']/AllowPatch[@name='PROP_3']
+
       # Here we manually set nucleic acid external bonds because CHARMM doesn't
       # provide a reliable way to get at this information and ParmEd fails to
       # guess it correctly for nucleic acids; we also fix RNA-to-DNA patches
