Run espaloma tests and refactor CMMotionRemover fix
The CMMotionRemover fix should go to where we create the openff xml,
that way any system using SMIRNOFFTemplateGenerator gets the fix

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -61,7 +61,7 @@ jobs:
         # https://github.com/openforcefield/openff-units/issues/111
         python -c "from openff.units import unit"
 
-        pytest -n logical --rungaff --log-cli-level $LOGLEVEL $COV_ARGS --durations=20 \
+        pytest -n logical --rungaff --runespaloma --log-cli-level $LOGLEVEL $COV_ARGS --durations=20 \
           openmmforcefields/tests/
 
         # add --rungaff / --runespaloma to run those tests
