--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -67,12 +67,22 @@ jobs:
         micromamba list
         python -c "from openmmforcefields import __version__, __file__; print(__version__, __file__)"
 
-    - name: Test Installed Package
+    - name: Test Installed Package (With Espaloma)
+      if: matrix.python-version != '3.13'
       run: |
         # https://github.com/openforcefield/openff-units/issues/111
         python -c "from openff.units import unit"
 
         pytest -n logical --rungaff --runespaloma --log-cli-level $LOGLEVEL $COV_ARGS --durations=20 \
+          openmmforcefields/tests/
+
+    - name: Test Installed Package
+      if: matrix.python-version == '3.13'
+      run: |
+        # https://github.com/openforcefield/openff-units/issues/111
+        python -c "from openff.units import unit"
+
+        pytest -n logical --rungaff  --log-cli-level $LOGLEVEL $COV_ARGS --durations=20 \
           openmmforcefields/tests/
 
         # add --rungaff / --runespaloma to run those tests
